criada a estrutura do numero primo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         <button id="btn-fatorial">Consultar Fat</button>
         <input placeholder="Fatorial" id="inputFat" required></input>
         <h1 id="saidaFat"></h1>
-    </div>    
+    </div>
+    <div id="divPrimo">
+        <button id="btn-primo">Consultar Primo</button>
+        <input placeholder="primo" id="inputPrimo" required></input>
+        <h1 id="saidaPrimo"></h1>
+    </div>        
     <script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
