configurado os botoes no html

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <div id="divFib">
-        <button id="btn-fib">Consultar Fib</button>
         <input placeholder="Fibonacci" id="inputFib" required></input>
+        <button id="btn-fib">Consultar Fib</button>
         <h1 id="saidaFib"></h1>
     </div>
     <div id="divFat">
-        <button id="btn-fatorial">Consultar Fat</button>
         <input placeholder="Fatorial" id="inputFat" required></input>
+        <button id="btn-fatorial">Consultar Fat</button>
         <h1 id="saidaFat"></h1>
     </div>
     <div id="divPrimo">
+        <input placeholder="É Primo?" id="inputPrimo" required></input>
         <button id="btn-primo">Consultar Primo</button>
-        <input placeholder="primo" id="inputPrimo" required></input>
         <h1 id="saidaPrimo"></h1>
     </div>        
     <script type="text/javascript" src="./index.js"></script>
