Converter real em dolar americano

--- a/index.html
+++ b/index.html
@@ -23,7 +23,19 @@
         <input placeholder="É Primo?" id="inputPrimo" required></input>
         <button id="btn-primo">Consultar Primo</button>
         <h1 id="saidaPrimo"></h1>
-    </div>        
+    </div>  
+    <div id="divCaixaAlta">
+        <input placeholder="Caixa Alta" id="inputCaixaAlta" required></input>
+        <button id="btn-CaixaAlta">Transformar em Caixa Alta</button>
+        <h1 id="saidaCaixaAlta"></h1>
+    </div>      
+    <div id="divConversorMoeda">
+        <input placeholder="USD Dolar Americano" id="inputConversorMoedaUSD" required></input>
+        <input placeholder="R$ Real" id="inputConversorMoedaReal" required></input>
+        <button id="btn-ConversorMoeda">Converter</button>
+        <h1 id="saidaConversorMoeda"></h1>
+    </div> 
+
     <script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
