selecionar a moeda de conversao

--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
         <input placeholder="R$ Real" id="inputConversorMoedaReal" required></input>
         <button id="btn-ConversorMoeda">Converter</button>
         <h1 id="saidaConversorMoeda"></h1>
+    </div>   
+
+    <div id="divConversorMoedaAuto"> 
+        <label for="moedas">Selecione a moeda:</label>
+        <select name="moeda" id="moedas">
+          <option id="dolarUSD" value="4.93">Dólar Americano</option>
+          <option id="dolarCAD" value="3.66">Dólar Canadense</option>
+          <option id="euro" value="5.38">Euro</option>
+          <option id="libra" value="6.17">Libra Esterlina</option>
+        </select>       
+        <input placeholder="R$ Real" id="inputConversorMoedaRealAuto" required></input>
+        <button id="btn-ConversorMoedaAuto">Converter</button>
+        <h1 id="saidaConversorMoedaAuto"></h1>
     </div> 
 
     <script type="text/javascript" src="./index.js"></script>
