--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <h1 id="saidaConversorMoedaAuto"></h1>
     </div> 
 
+    <div id="divMetrosCubicos">
+        <input placeholder="Metros Cubicos" id="inputMetrosCubicos" required></input>
+        <button id="btn-MetrosCubicos">Transformar em litros</button>
+        <h1 id="saidaMetrosCubicos"></h1>
+    </div>    
+
     <script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
