Conversor de Graus Celsius para Fahrenheit

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
         <input placeholder="Metros Cubicos" id="inputMetrosCubicos" required></input>
         <button id="btn-MetrosCubicos">Transformar em litros</button>
         <h1 id="saidaMetrosCubicos"></h1>
-    </div>    
+    </div>
+    
+    <div id="divConversorCparaF">
+        <input placeholder="Graus" id="ConversorCparaF" required></input>
+        <button id="btn-ConversorCparaF">Transformar em Fahrenheit</button>
+        <h1 id="saidaConversorCparaF"></h1>
+    </div>  
 
     <script type="text/javascript" src="./index.js"></script>
 </body>
