--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <option id="dolarCAD" value="3.66">Dólar Canadense</option>
           <option id="euro" value="5.38">Euro</option>
           <option id="libra" value="6.17">Libra Esterlina</option>
+          <option id="peso" value="0,021">Peso Argentino</option>
         </select>       
         <input placeholder="R$ Real" id="inputConversorMoedaRealAuto" required></input>
         <button id="btn-ConversorMoedaAuto">Converter</button>
@@ -57,7 +58,7 @@
     
     <div id="divConversorCparaF">
         <input placeholder="Graus" id="ConversorCparaF" required></input>
-        <button id="btn-ConversorCparaF">Transformar em Fahrenheit</button>
+        <button id="btn-ConversorCparaF">Transformar em Graus Fahrenheit</button>
         <h1 id="saidaConversorCparaF"></h1>
     </div>  
 
